# agent.rust

./: .gitignore  Cargo.toml  README.md  design.md  task.md
src/: config.rs  main.rs
src/context/: manager.rs  mod.rs
src/deepseek/: client.rs  mod.rs  types.rs
src/engine/: mod.rs
src/memory/: manager.rs  mod.rs
src/tools/: cmd_tool.rs  file_tools.rs  mod.rs
src/ui/: mod.rs  repl.rs  tui.rs
