[package]
name = "agent-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
rustyline = "14.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1.0"
